<resources>
    <string name="app_name">W22BORG</string>
    <string name="LastName">Last Name</string>
    <string name="FirstName">First Name</string>
    <string name="w_email">Email</string>

    <string name="open_nav_drawer">Open navigation drawer</string>
    <string name="close_nav_drawer">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="FN">First Name</string>
    <string name="LN">Last Name</string>
    <string name="EMAIL">username@domain.com</string>
    <string name="PHONE">### ### ####</string>
    <string name="STARTDATE">MM/DD/YYYY</string>
    <string name="ActiveEmployee">Active Employee</string>
    <string name="ViewAll">View All</string>
    <string name="Edit">Edit</string>
    <string name="CanOpen">Can Open</string>
    <string name="CanClose">Can Close</string>
    <string name="Save">Save</string>
    <string name="Delete">Delete</string>
    <string name="Select">Select</string>

    <string name="backward"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="weekly">Week view</string>
    <string name="daily">Daily view</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="editAvailability" />
    <string name="edit_availability">Edit Availability</string>
    <string name="edit_worker">Edit Employee Profile</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="employee_id_in_shift">ID</string>
    <string name="employee_name_in_shift">Employee Name</string>
    <string name="ViewAllEmp">View All Employees</string>
</resources>