<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".view.AddEmployee">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/actionbar_AddEm"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/Theme.AppCompat.Light" />


    </LinearLayout>

    <EditText
        android:id="@+id/f_name"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="123dp"
        android:ems="9"
        android:hint="@string/FN"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/l_name"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@+id/f_name"
        android:ems="9"
        android:hint="@string/LN"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/em_email"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/f_name"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/EMAIL"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/em_email"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/PHONE"
        android:inputType="phone" />

    <TextView
        android:id="@+id/start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_number"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/STARTDATE"
        android:textSize="20sp" />

    <Button
        android:id="@+id/addEm_bttn"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:enabled="true"
        android:text="Add Employee" />

    <TextView
        android:id="@+id/FirstN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:text="First Name" />

    <TextView
        android:id="@+id/LastN"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="100dp"
        android:text="Last Name" />

    <TextView
        android:id="@+id/email_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="185dp"
        android:text="Email" />

    <TextView
        android:id="@+id/phone_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="270dp"
        android:text="Phone Number" />

    <TextView
        android:id="@+id/startD_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="355dp"
        android:text="Start Date" />


</RelativeLayout>