<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ViewEmployee">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/actionbar_ViewEm"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/Theme.AppCompat.Light" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_canOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="225dp"
            android:layout_marginTop="180dp"
            android:text="Can Open"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_canClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="225dp"
            android:layout_marginTop="10dp"
            android:text="Can Close"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:layout_editor_absoluteX="192dp"
            tools:layout_editor_absoluteY="340dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_Active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="256dp"
            android:layout_marginTop="10dp"
            android:text="Active"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>


    <Button
        android:id="@+id/editingEm_bttn"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="10dp"
        android:text="@string/edit_worker"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/editingAvil_bttn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="80dp"
        android:text="@string/edit_availability"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="138dp"
        android:layout_marginTop="85dp"
        android:text="@string/LN"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="44dp" />

    <TextView
        android:id="@+id/txt_fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="85dp"
        android:minEms="2"
        android:text="@string/FN"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="44dp" />

    <TextView
        android:id="@+id/txt_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="260dp"
        android:layout_marginTop="91dp"
        android:text="ID"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:layout_editor_absoluteX="371dp"
        tools:layout_editor_absoluteY="44dp" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_email"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="-100dp"
        android:ems="14"
        android:text="@string/EMAIL"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="106dp" />

    <TextView
        android:id="@+id/txt_phoneNo"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_phoneNumber"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="-180dp"
        android:layout_marginBottom="240dp"
        android:ems="10"
        android:text="@string/PHONE"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="164dp" />

    <TextView
        android:id="@+id/txt_startDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_startDate"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:text="@string/STARTDATE"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="229dp" />

    <TextView
        android:id="@+id/txt_totalShift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_startDate"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="Total Shifts"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="295dp" />

    <TextView
        android:id="@+id/textView_firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_fname"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:text="@string/FirstName"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/txt_fname"
        app:layout_constraintStart_toStartOf="@+id/txt_fname" />

    <TextView
        android:id="@+id/textView_lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_lname"
        android:layout_marginStart="55dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/textView_firstName"
        android:text="@string/LastName"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/txt_lname"
        app:layout_constraintStart_toStartOf="@+id/txt_lname" />

    <TextView
        android:id="@+id/textView_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_firstName"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="101dp"
        android:text="Email"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/txt_email"
        app:layout_constraintStart_toStartOf="@+id/txt_email" />

    <TextView
        android:id="@+id/textView_phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_email"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="181dp"
        android:text="Phone Number"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/txt_phoneNo"
        app:layout_constraintStart_toStartOf="@+id/txt_phoneNo" />

    <TextView
        android:id="@+id/textView_startDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_phoneNo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="-230dp"
        android:text="Start Date"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/txt_startDate"
        app:layout_constraintStart_toStartOf="@+id/txt_startDate" />

    <TextView
        android:id="@+id/textView_totalShifts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_totalShift"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:text="Total Shifts"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/txt_totalShift"
        app:layout_constraintStart_toStartOf="@+id/txt_totalShift" />

    <TextView
        android:id="@+id/textView_Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_id"
        android:layout_marginStart="54dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/textView_lastName"
        android:text="Employee ID"
        android:visibility="visible"
        tools:layout_editor_absoluteX="309dp"
        tools:layout_editor_absoluteY="24dp" />


</RelativeLayout>